qemu (1.0+dfsg-2) UNRELEASED; urgency=low

  * Add patch from upstream to fix cmpxchg on x86.
  * Add patch to not link user builds with NSS (Closes: #648202).

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 08 Jan 2012 13:11:27 +0100

qemu (1.0+dfsg-1) experimental; urgency=low

  * New upstream version.
  * Add build-dep on libxen-dev to enable xen support. 
  * Add build-dep on libiscsi-dev to enable iscsi support.
  * Add patch from upstream to not block SIGCHLD (Closes: #618743).

 -- Vagrant Cascadian <vagrant@debian.org>  Fri, 30 Dec 2011 16:12:03 -0800

qemu (1.0~rc4+dfsg-1) experimental; urgency=low

  * New upstream version:
    - Fixes CVE-2011-4111.
  * remove patches applied upstream:
    - security/leftover.patch
    - Move_QEMU_INCLUDES_before_QEMU_CFLAGS
    - runnning-typo.patch
  * Install new qemu-system variants:
    xtensa, xtensaeb, alpha
  * debian/rules: Drop hack to rename "qemu" binary to "qemu-system-i386", as 
    upstream now does the same.
  * Enable spice support on amd64: 
    - Add Build-Depends: libspice-server-dev, libspice-protocol-dev
  * debian/rules: use dh_prep instead of "dh_clean -k", which is deprecated.
  * qemu-system: Bump dependency on seabios to 1.6.3~.

 -- Vagrant Cascadian <vagrant@debian.org>  Mon, 28 Nov 2011 23:40:24 -0800

qemu (0.15.1+dfsg-3) unstable; urgency=low

  * Add patch from upstream to fix FTBFS on ia64. 

 -- Vagrant Cascadian <vagrant@debian.org>  Fri, 09 Dec 2011 23:48:21 -0800

qemu (0.15.1+dfsg-2) unstable; urgency=low

  * Add patch that fixes a buffer overrun (CVE-2011-4111). 
  * Enable spice support on amd64:
    - Add Build-Depends: libspice-server-dev, libspice-protocol-dev
  * debian/rules: Use dh_prep instead of "dh_clean -k", which is deprecated. 

 -- Vagrant Cascadian <vagrant@debian.org>  Mon, 28 Nov 2011 20:34:50 -0800

qemu (0.15.1+dfsg-1) unstable; urgency=low

  * New upstream version.

 -- Vagrant Cascadian <vagrant@debian.org>  Sun, 06 Nov 2011 10:37:31 -0800
