@@ -2,6 +2,7 @@ qemu (1.0+dfsg-2) UNRELEASED; urgency=low
 
   * Add patch from upstream to fix cmpxchg on x86.
   * Add patch to not link user builds with NSS (Closes: #648202).
+  * Add binfmt support for s390x.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 08 Jan 2012 13:11:27 +0100
 
